--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a class="nav-link" href="#introduction">Introduction</a>
       </li>
       <li>
-        <a class="nav-link" href="#javascript">JavaScript, HTML and CSS</a>
+        <a class="nav-link" href="#javascript_html_and_css">JavaScript HTML and CSS</a>
       </li>
       <li>
         <a class="nav-link" href="#operators">Operators</a>
@@ -23,7 +23,7 @@
       <li>
         <a class="nav-link" href="#hello_world">Hello World</a></li>
       <li>
-        <a class="nav-link" href="#if_else">If... Else Statements</a></li>
+        <a class="nav-link" href="#if_else">If Else</a></li>
       <li>
         <a class="nav-link" href="#functions">Functions</a></li>
         </nav>
@@ -64,8 +64,8 @@ Real-time applications like chat apps and online games
 </section>
 
 
-<section id="javascript" class="main-section">
-  <header>JavaScript, HTML and CSS</section>
+<section id="javascript_html_and_css" class="main-section">
+  <header>JavaScript HTML and CSS</section>
    <p>HTML, CSS, and JavaScript are the three fundamental languages ​​for building web pages. Each of them has a specific role and, together, they form a powerful trio for creating interactive and visually appealing websites.</p>
   <p>HTML (HyperText Markup Language): This is the basic structure of a web page. HTML tags define the elements of a page, such as headings, paragraphs, images, links, and lists. It is like the skeleton of a building.</p>
   <p>CSS (Cascading Style Sheets): This is responsible for the visual appearance of the page. CSS defines the colors, fonts, spacing, layouts, and other visual styles of HTML elements. It is like the paint and decoration of the building.</p>
@@ -79,21 +79,22 @@ A simple example:</p>
   <p>Imagine that you want to create a button that, when clicked, displays a "Hello, world!" message.
 
 HTML: Create a button with some text:
-CSS: Defines the appearance of the button: <pre><code>button { background-color: blue; color: white; }</code></pre>
+CSS: Defines the appearance of the button: <pre><code>
+button { background-color: blue; color: white; }</code></pre>
 JavaScript: Adds a click event to the button and displays the message:
 <pre><code>
 const button = document.querySelector('button');
 button.addEventListener('click', () => {
-    alert('Hello, world!');
+  alert('Hello, world!');
 });</code></pre>
 
 
 </p>
   <p>In summary:
-
-HTML: The foundation.
-CSS: The beauty.
-JavaScript: Interactivity.
+<ul>
+<li>HTML: The foundation.</li>
+<li>CSS: The beauty.</li>
+<li>JavaScript: Interactivity.</li></ul>
 Together, these three languages ​​allow you to create feature-rich web pages that offer a dynamic and engaging experience to users.</p>
   <p></p>
   <p></p>
@@ -104,11 +105,9 @@ Together, these three languages ​​allow you to create feature-rich web pages
 <section id="operators" class="main-section">
   <header>Operators</header>
    <p>JavaScript has some operators with the funcionality to do math and other things like string concatenation.</p>
-  <p><code>+</code> Addiction
-  <code>-</code> Subtraction
-  <code>*</code> Multiplication
-  <code>%</code> Modulus</p>
-  <code>/</code> Division
+  <p>Arithmetic Operators: <code>+, -,
+  *, %, /, **</code></p>
+  
   <p></p>
   <p></p>
   <p></p>
@@ -160,13 +159,18 @@ var city = "Los Angeles";</code></pre>
 <section id="hello_world" class="main-section">
   <header>Hello World</header>
     <article>
-    <p>Let's make our first program in </p><pre><code> function greetName (name){
-      let name = prompt("What's your name");
-      console.log("Hello" + name)
-      };</code></pre>
-    <p></p>
-    <p></p>
-    <p></p>
+    <p>Let's make our first program in JavaScript: </p><pre><code> 
+function greetName () {
+  let name = prompt("What's your name");
+  console.log("Hello" + name)
+};
+greetName();</code></pre>
+    <p>We could also made like this:</p>
+    <p><pre><code>
+var name = prompt("What's your name?")
+alert("Hello, " + Luis)</pre></code>
+    </p>
+    <p>In the two examples we use string concatenation with <code>+</code> in order to merge a string with a variable value to make a phrase.</p>
     <p></p>
     <p></p>
     <p></p>
@@ -176,9 +180,9 @@ var city = "Los Angeles";</code></pre>
     </article>
 </section>
 <section id="if_else" class="main-section">
-  <header>If...else statements</header>
-  <p>If-else statements are fundamental control flow structures in JavaScript that allow you to execute different code blocks based on a specific condition.<br>
-Basic Structure:<br>
+  <header>If else</header>
+  <p>If-else statements are fundamental control flow structures in JavaScript that allow you to execute different code blocks based on a specific condition.
+Basic Structure:
 <pre><code>
 if (condition) {
   // Code to execute if the condition is true
@@ -226,14 +230,13 @@ if (age >= 18 && isStudent) {
 <pre><code>function functionName(parameter1, parameter2, ...) {
   // Code to be executed
   return value; // Optional: returns a value
-}
-</pre></code></p>
-  <p>Key Components:<br>
-function keyword: Declares the function.<br>
-functionName: A unique name for the function.<br>
-parameters: Optional variables that receive values when the function is called.<br>
-function body: The code block that executes the function's logic.<br>
-return statement: Optional, used to return a value from the function.<br>
+}</pre></code></p>
+  <p>Key Components:
+<ul><li>function keyword: Declares the function.</li>
+<li>functionName: A unique name for the function.</li>
+<li>parameters: Optional variables that receive values when the function is called.</li>
+<li>function body: The code block that executes the function's logic.</li>
+<li>return statement: Optional, used to return a value from the function.</li></ul>
 Calling a Function: To execute a function, you simply use its name followed by parentheses:
 </p>
   <p><code>
